Created account schema definition
- updated accounts controller
